# memory-mcp-server

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build.rs  docker-compose.yml  onnx_opset_upgrade.py  test.py
.github/workflows/: release-linux.yml
assets/: .gitignore  model.onnx  test_embedding.json
src/: main.rs  server.rs  types.rs
src/database/: documents_ops.rs  init.rs  memory_ops.rs  migration.rs  mod.rs  models.rs  schema.rs  tests.rs
src/model/: helper.rs  mod.rs  tests.rs
